mac_test: change to USART6

--- a/stm32/Makefile
+++ b/stm32/Makefile
@@ -36,7 +36,7 @@ clean:
 
 include mbedtls_mod/Makefile.mbedtls
 
-flash:
+flash: $(APP).elf
 	openocd $(OPENOCD_ARGS) -c "program ./$(APP).elf verify reset exit"
 
 gdb:
